tests/rustdoc-ui/unused-doc-comment-on-reexport.stderr
error: doc comment on glob reexports are always ignored
  --> $DIR/unused-doc-comment-on-reexport.rs:24:1
   |
LL | /// Error!
   | ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-doc-comment-on-reexport.rs:1:9
   |
LL | #![deny(rustdoc::unused_reexport_documentation)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: doc comment on glob reexports are always ignored
  --> $DIR/unused-doc-comment-on-reexport.rs:27:1
   |
LL | /// Error!
   | ^^^^^^^^^^

error: doc comments on non-inlined reexports of local items are ignored
  --> $DIR/unused-doc-comment-on-reexport.rs:12:5
   |
LL |     /// Error!
   |     ^^^^^^^^^^
   |
   = note: the documentation won't be visible because reexports don't have their own page
help: try adding `#[doc(inline)]`
   |
LL |     #[doc(inline)] pub use a::Foo as Bar;
   |     ++++++++++++++
help: or move the documentation directly on the reexported item
   |
LL -     /// Error!
LL +     
   |

error: aborting due to 3 previous errors

